@@ -359,6 +359,9 @@ BUG FIXES
 	first byte.  This would lead to incorrect results in an MBCS
 	locale if a non-ASCII character was supplied.
 
+    o	There are some checks for valid C-style formats in, e.g. 
+	png(filename=).  (PR#10571)
+
 
 
 
